--- a/fe-test-app-master/src/app/users/users.component.html
+++ b/fe-test-app-master/src/app/users/users.component.html
@@ -7,7 +7,8 @@
       <h4 class="page-size-title">rows</h4>
       <mat-form-field class="page-size-select" appearance="standard">
         <mat-select [(value)]="defaultPageSize"
-                    (selectionChange)="setRowsPerPage($event)">
+                    (selectionChange)="setRowsPerPage($event)"
+                      [disabled]="loadingPage || dataSource.data.length < 1">
           <mat-option *ngFor="let size of pageSizeOptions" [value]="size">
             {{size}}
           </mat-option>
@@ -15,9 +16,8 @@
       </mat-form-field>
     </div>
   </div>
-  <div class="mat-elevation-z8 table-container" matSort *ngIf="this.dataSource">
-    <table mat-table [dataSource]="this.dataSource">
-      <!-- Username Column -->
+  <div class="mat-elevation-z8 table-container" matSort *ngIf="dataSource">
+    <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="username">
         <th mat-header-cell *matHeaderCellDef mat-sort-header i18n>Username</th>
         <td mat-cell *matCellDef="let element"> {{element.username}} </td>
@@ -54,3 +54,7 @@
     </mat-paginator>
   </div>
 </div>
+<div class="spinner" *ngIf="loadingPage">
+  <mat-spinner></mat-spinner>
+</div>
+
