--- a/fe-test-app-master/src/app/users/users.component.scss
+++ b/fe-test-app-master/src/app/users/users.component.scss
@@ -46,6 +46,11 @@ mat-table {
   color: red;
 }
 
+.spinner {
+  display: flex;
+  justify-content: center;
+}
+
 // media queries
 
 @media (max-width: 1140px) {
