--- a/fe-test-app-master/src/app/users/users.component.html
+++ b/fe-test-app-master/src/app/users/users.component.html
@@ -38,7 +38,7 @@
         <td mat-cell *matCellDef="let element"
             [ngClass]="{'user-status-active': element.status === 1,
             'user-status-inactive': element.status === 3}">
-          {{getStatus(element.status)}} </td>
+          {{getUsersStatus(element.status)}} </td>
       </ng-container>
       <!-- Date created -->
       <ng-container matColumnDef="dateCreated">
